# wasm-i2c-compare

./: .gitignore  Cargo.toml  README.md  justfile
.devcontainer/: Dockerfile  devcontainer.json  dockerignore.save  post-create.sh
.devcontainer/build-context/: Cargo.toml  packages
crates/i2c_spy/: Cargo.toml
crates/i2c_spy/src/: lib.rs
crates/imu/: Cargo.toml  expanded.rs
crates/imu/src/: lib.rs
crates/imu_native/: Cargo.toml
crates/imu_native/benches/: bench_native_imu.rs
crates/imu_native/src/: lib.rs
crates/wasm_hal/: Cargo.toml
crates/wasm_hal/src/: bindings.rs  delay.rs  i2c.rs  lib.rs
crates/wasm_hal_host/: Cargo.toml
crates/wasm_hal_host/src/: lib.rs
examples/eh-wasm/: Cargo.toml
examples/eh-wasm/benches/: bench_imu_i2c.rs
examples/eh-wasm/src/: bindings.rs  lib.rs  main.rs
examples/imu-opmode/: Cargo.toml  README.md
examples/imu-opmode/src/: bindings.rs  calibration.rs  main.rs
wit/: bp-hal.wit  imus.wit  types.wit  world.wit
