[package]
name = "wasm-hal"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[package.metadata.component]
target = { path = "../../wit", world = "bp-hal" }
package = "component:wasm-hal"

[package.metadata.component.dependencies]

[dependencies]
embedded-hal = "1.0.0"
bitflags = "2.4.2"
tracing = { workspace = true }
wit-bindgen-rt = "0.22.0"

[dev-dependencies]
