[package]
name = "wasm-hal-host"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
# bp-core = { workspace = true }
embedded-hal = "1.0.0"
embedded-hal-bus = "0.1.0"
linux-embedded-hal = "0.4.0"
# shared-bus = { version = "0.3", features = ["std"] }
# table = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true, features = ["component-model"] }
wasmtime-wasi = { workspace = true }
i2c_spy = { path = "../i2c_spy" }
