[package]
name = "imu-opmode"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[package.metadata.component.target]
path = "../../wit"
world = "imu-client"

[package.metadata.component]
package = "component:imu-opmode"
# adapter = "../../adapters/wasi_snapshot_preview1.command.wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bitflags = "2.4.2"
wit-bindgen-rt = "0.22.0"
